<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="server_client_id" translatable="false">238462781665-h1os7ac4i7k76b93dnhrdmfj5i6keps6.apps.googleusercontent.com</string>
    <string name="app_name">GreenWay</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="string1Carosel">Electric vehicles and public transport reduce emissions.</string>
    <string name="string2Carosel">Sustainability preserves resources for future generations.</string>
    <string name="string3Carosel">Sustainability is crucial to tackling climate change.</string>
    <string name="string4Carosel">Cycle paths and high-speed trains promote sustainable mobility and urban health.</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_in_Google">Sign in with Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>


    <string name="insert_name">Insert name</string>
    <string name="insert_surname">Insert surname</string>
    <string name="insert_email">Insert Email</string>
    <string name="insert_password">Insert password</string>
    <string name="different_password">Insert right password</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>

    <string name="repeat_password">Repeat Password</string>
    <string name="error_no_google_account_found_message">No google account found</string>
    <string name="unexpected_error">unexpected error</string>
    <string name="password_not_match">Password don\'t match</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="map">Map</string>
    <string name="nav">Navigator</string>
    <string name="challenge">Challenge</string>
    <string name="user">User</string>
    <string name="green" translatable="false">GREEN</string>
    <string name="way" translatable="false">WAY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="autoLogin">Automatically logging in</string>
    <string name="error_login_password_message">login error</string>
    <string name="error_login_user_message">Error login user</string>
    <string name="username">username</string>
    <string name="points">points</string>
    <string name="co2Saved">CO2 Saved:</string>
    <string name="co2">0g</string>
    <string name="co2consumed">CO2 Consumed:</string>
    <string name="select">Select</string>
    <string name="distance">Distance:</string>
    <string name="emission">Emission produced:</string>
    <string name="co2_production_custom">My car co2 production</string>
    <string name="co2_car_emission_change">Car emission changed!</string>


    <string name="find">Find</string>
    <string name="insertStart">Insert start field</string>
    <string name="start">Start</string>
    <string name="destination">Destination</string>
    <string name="insertDestination">Insert Destination field</string>
    <string name="insertStartAndDestination">Insert both fields</string>
    <string name="ApriMappa">Open Map</string>
    <string name="changePw">Change Password</string>
    <string name="oldPw">Old Password</string>
    <string name="newPw">New Password</string>
    <string name="repeatPw">Repeat Password</string>
    <string name="confirm">Confirm</string>
    <string name="changePhoto">Change profile photo</string>
    <string name="fuelCarInfo">Insert fuel car info</string>
    <string name="empty_field">Please fill in this field</string>
    <string name="error_password_google">Error: change password with google account</string>
    <string name="error_oldpassword">Old password wrong</string>
    <string name="error_password_match">Password doesn\'t match</string>
    <string name="password_changed">Password changed!</string>
    <string name="new_password_error">Old password same as the new one</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="error_retrieving_user_info">Error retrieving user info</string>
    <string name="error_retrieving_routes">Error retrieving routes</string>
    <string name="error_retrieving_challenge">Error retrieving challenge</string>
    <string name="error_login">Email or password wrong</string>
    <string name="friends">Friends</string>
    <string name="error_retrieving_friends">Error retrieving friends</string>
    <string name="error_retrieving_all_users">Error retrieving all user</string>
    <string name="car_production_notLoad">Car production not loaded</string>
    <string name="car_production_number_error">Inserted value is not a number</string>
    <string name="error_removing_friend">Error: friend not removed</string>
    <string name="error_adding_friend">Error: friend not added</string>
    <string name="hazardous_air">Hazardous air quality (301-500)</string>
    <string name="very_unhealthy_air">Very unhealthy air quality (201-300)</string>
    <string name="unhealthy_air">Unhealthy air quality (151-200)</string>
    <string name="unhealthy_for_sensitive_group_air">Unhealthy air quality for sensitive groups (101-150)</string>
    <string name="moderate_air">Moderate air quality (51-100)</string>
    <string name="good_air">Good air quality (0-50)</string>
    <string name="color_legend">Legend</string>
    <string name="us_aqi">(scale: us_AQI)</string>
    <string name="image_load_complete">Image load completed</string>


</resources>