<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="25dp"
    android:layout_marginStart="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/comment_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time_card_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tempo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emission_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/emission"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"

            />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="30"
                android:layout_toRightOf="@id/emission_text"
                android:layout_marginStart="5dp"
                android:layout_marginTop="40dp"
                android:textStyle="bold"
                android:textColor="@color/md_theme_primary"

                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/distance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/distance"
                android:layout_marginStart="10dp"
                android:layout_marginTop="70dp"

                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="500m"
                android:layout_toEndOf="@id/distance_text"
                android:layout_marginStart="5dp"
                android:layout_marginTop="70dp"
                android:textStyle="bold"

                />
        </RelativeLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:text="@string/select" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>